--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.0",
@@ -12,6 +13,7 @@
     "bootstrap": "^5.3.0",
     "firebase": "^10.1.0",
     "formik": "^2.4.2",
+    "framer-motion": "^10.15.0",
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
