--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.4",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -12,7 +13,7 @@
     "bootstrap": "^5.3.0",
     "firebase": "^10.1.0",
     "formik": "^2.4.2",
-    "framer-motion": "^10.15.0",
+    "framer-motion": "^4.1.17",
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
